Working on mobile view issues

--- a/app/sass/includes/main.scss
+++ b/app/sass/includes/main.scss
@@ -27,7 +27,7 @@ select.form-control {
 
 button.btn {
     padding: 12px;
-    min-width: 100px;
+    min-width: 85px;
 }
 
 .input-group-append button.btn {
