--- a/app/sass/includes/modal.scss
+++ b/app/sass/includes/modal.scss
@@ -11,6 +11,7 @@
             width: 55px;
             height: 75px;
             position: relative;
+            margin: -1rem 0 -1rem auto;
             cursor: pointer;
             &:focus {
                 outline:none;
